--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  font-size: 18px;
+  line-height: 24px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.pokedex h1 {
+  text-align: center;
+  margin: 8px 0 50px 0;
+}
+.pokemon {
+  display: inline-block;
+  height: 300px;
+  padding: 60px 0 0 10px;
+}
+.pokemon div {
+  display: inline-block;
+  width: 250px;
+}
+.pokemon p {
+  width: 250px;
+  margin: 0 0 60px 10px;
+}
+.pokemon img {
+  margin-top: 0;
+  width: 190px;
+  height: 190px;
+}
+.pokemon div p:first-child {
+  font-weight: bold;
+  margin-right: 50px;
+}
+.pokedex {
+  margin: 0 auto;
+}
+.button {
+  margin: 70px auto;
+}
+.button button {
+  width: 35px;
+  height: 40px;
+  font-family: 'Press Start 2P', cursive;;
+  font-size: 18px;
+  line-height: 25px;
+  background-color: #484D4E;
+  opacity: 0.05;
+  margin: 230px 0 0 74px;
 }
